# CoverUP

./: .gitignore  CoverUP.py  CoverUp.py  MANIFEST.in  README.md  install.sh  pdfanon.desktop  pyproject.toml  requirements.txt  snapcraft.yaml
coverup/: __init__.py  __main__.py  __pyinstaller.py  document_loader.py  i18n.py  image_container.py  main.py  translations.py  ui.py  utils.py  workfile.py
coverup/pyinstaller_hooks/: __init__.py  hook-coverup.py
docs/: tcl9-migration.md
flatpak/: de.digidigital.coverup.yml
